[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Actors/Enemies/GEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Actors/Enemies/SimpleTower/SimpleTower.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Actors/Enemies/SimpleTower/SimpleTower.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[sub_resource type="Animation" id=3]
resource_name = "Damage"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 1 ), Vector2( 1, 0.8 ), Vector2( 0.7, 0.7 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Dead"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 1 ), Vector2( 0.5, 0.5 ), Vector2( 1e-05, 1e-05 ) ]
}

[node name="SimpleTower" instance=ExtResource( 1 )]
script = ExtResource( 2 )
hp = 30
drop_score = 4
attack = 8

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )

[node name="Collision" parent="." index="1"]
shape = SubResource( 1 )
disabled = true

[node name="HitArea" parent="." index="2"]
editor/display_folded = true

[node name="Collision" parent="HitArea" index="0"]
shape = SubResource( 2 )

[node name="CanFire" type="Timer" parent="." index="3"]
wait_time = 3.0

[node name="FireRate" type="Timer" parent="." index="4"]

[node name="Anim" type="AnimationPlayer" parent="." index="5"]
anims/Damage = SubResource( 3 )
anims/Dead = SubResource( 4 )
[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
[connection signal="timeout" from="CanFire" to="." method="_on_CanFire_timeout"]
[connection signal="timeout" from="FireRate" to="." method="_on_FireRate_timeout"]
[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]
